# multimodalinput_input

./: 2310.diff  BUILD.gn  CODEOWNERS.h  OAT.xml  TODO.md  acts_cpp.patch  bundle.json  code-review.csv  et --hard  mmi_uinput.rc  multimodalinput.cfg  multimodalinput_mini.gni  ohos.build  openharmony-test.txt  touch_gesture.json
frameworks/napi/: BUILD.gn
frameworks/napi/distributed_input/: BUILD.gn
frameworks/napi/infrared_emitter/: BUILD.gn
frameworks/napi/input_consumer/: BUILD.gn
frameworks/napi/input_device/: BUILD.gn
frameworks/napi/input_device_cooperate/: BUILD.gn
frameworks/napi/input_dinput/: BUILD.gn
frameworks/napi/input_event_client/: BUILD.gn
frameworks/napi/input_monitor/: BUILD.gn
frameworks/napi/key_code/: BUILD.gn
frameworks/napi/key_event/: BUILD.gn
frameworks/napi/mouse_event/: BUILD.gn
frameworks/napi/pointer/: BUILD.gn
frameworks/napi/short_key/: BUILD.gn
frameworks/napi/src/: js_register_event.cpp  js_register_events.cpp  js_register_handle.cpp  js_register_module.cpp  js_register_util.cpp  multi_input_common.cpp
frameworks/napi/touch_event/: BUILD.gn
frameworks/proxy/: BUILD.gn
frameworks/proxy/binder_proxy/: BUILD.gn
patch/diff_libevdev_hdf/: BUILD.gn  libevdev_hdf_0000.diff
patch/diff_mtdev_mmi/: BUILD.gn
patch/diff_mtdev_mmi/mtdev/: mtdev_0000.diff
plugins/: BUILD.gn
plugins/touch2KeyNew/: touch_2_key_new_handler.h  touch_2_key_plugin.h
plugins/touch2key/include/: touch_2_key_handler.h
plugins/touch2key/src/: touch_2_key_handler.cpp
service/: BUILD.gn  hisysevent.yaml  mmi_log.conf
service/ability_launch/include/: ability_launch_manager.h
service/ability_launch/src/: ability_launch_manager.cpp
service/app_state_manager/include/: app_state_observer.h
service/app_state_manager/src/: app_state_observer.cpp
service/app_state_manager/test/: app_state_observer_test.cpp
service/application_manager/include/: app_register.h
service/application_manager/src/: app_register.cpp
service/application_manager/test/: app_register_test.cpp
service/connect_manager/: BUILD.gn
service/connect_manager/include/: i_input_binder_client.h  i_multimodal_input_connect.h  i_multimodal_input_connect.h.rej  i_uds_server.h  i_uds_server.h.rej  input_binder_client_proxy.h  input_binder_client_server.h  input_binder_client_stub.h  input_connect_stub.h  multimodal_input_connect_death_recipient.h  multimodal_input_connect_death_recipient.h.rej  multimodal_input_connect_def_parcel.h  multimodal_input_connect_def_parcel.h.rej  multimodal_input_connect_define.h  multimodal_input_connect_define.h.rej  multimodal_input_connect_manager.h  multimodal_input_connect_manager.h.rej  multimodal_input_connect_proxy.h  multimodal_input_connect_proxy.h.rej  multimodal_input_connect_remoter.h  multimodal_input_connect_service.h  multimodal_input_connect_stub.h  multimodal_input_connect_stub.h.rej  multimodalinput_ipc_interface_code.h
service/connect_manager/src/: i_multimodal_input_connect_stub.cpp  input_binder_client_death_recipient.cpp  input_binder_client_server.cpp  input_binder_client_stub.cpp  input_connect_stub.cpp  multimodal_input_connect_death_recipient.cpp  multimodal_input_connect_death_recipient.cpp.rej  multimodal_input_connect_def_parcel.cpp  multimodal_input_connect_def_parcel.cpp.rej  multimodal_input_connect_manager.cpp  multimodal_input_connect_manager.cpp.rej  multimodal_input_connect_proxy.cpp  multimodal_input_connect_proxy.cpp.rej  multimodal_input_connect_remoter.cpp  multimodal_input_connect_service.cpp  multimodal_input_connect_stub.cpp  multimodal_input_connect_stub.cpp.rej
service/connect_manager/test/: multimodal_input_connect_stub_ex_test.cpp  multimodal_input_connect_stub_test.cpp
service/container_ipc_manager/: BUILD.gn
service/container_ipc_manager/include/: container_ipc_manager.h
service/container_ipc_manager/src/: container_ipc_manager.cpp
service/cooperate/: BUILD.gn
service/cooperate/include/: event_cooperate_manager.h  event_cooperate_proxy.h  event_cooperate_service.h  event_cooperate_stub.h  i_event_cooperate.h
service/cooperate/src/: event_cooperate_manager.cpp  event_cooperate_proxy.cpp  event_cooperate_service.cpp  event_cooperate_stub.cpp
service/crown_event_normalize/include/: crown_event_normalize.h  crown_transform_processor.h
service/crown_event_normalize/src/: crown_event_normalize.cpp  crown_transform_processor.cpp
service/crown_event_normalize/test/: crown_event_normalize_test.cpp  crown_transform_processor_test.cpp
service/delegate_task/include/: delegate_interface.h  delegate_tasks.h  delegate_tasks.h.rej
service/delegate_task/src/: delegate_interface.cpp  delegate_tasks.cpp  delegate_tasks.cpp.rej
service/delegate_task/test/: delegate_tasks_test.cpp
service/device_config/include/: device_config_file_parser.h  device_config_file_parser.h.rej
service/device_config/src/: device_config_file_parser.cpp.rej
service/device_manager/include/: define_device_manager.h  device_register.h  i_input_device_manager.h  input_device.h  input_device_manager.h  input_device_manager.h.rej  message_post.h
service/device_manager/src/: device_register.cpp  i_input_device_manager.cpp  input_device.cpp  input_device_manager.cpp  input_device_manager.cpp.rej  message_post.cpp
service/dfx/include/: dfx_hisysevent.h  (+1 more)
service/dinput/: BUILD.gn
service/event_filter_binder/: BUILD.gn
service/filter/: BUILD.gn
service/fingersense_wrapper/: BUILD.gn
service/hdf_adapter/: BUILD.gn
service/include/: device.h
service/input_provider/: BUILD.gn
service/sign/: BUILD.gn
service/src/: device.cpp  multimodal_input_service.cpp
test/moduletest/: BUILD.gn
tools/event_inject/: BUILD.gn
tools/v2/: BUILD.gn
uevent/: BUILD.gn
uevent/export_include/: libudev.h
uevent/include/: device.h  device_manager.h  discriminator.h  enumerator.h  monitor.h  uevent.h  utility.h
uevent/src/: device.cpp  device_manager.cpp  discriminator.cpp  enumerator.cpp  monitor.cpp  utility.cpp
uevent/test/: uevent_test.cpp
uevent/udev/: libudev.cpp
util/stack_dumper/: BUILD.gn
(+1697 files in other folders)
