# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

group("third_party_group") {
  deps = [ "//foundation/multimodalinput/input/patch:patch_packages", ]
  if (input_feature_libinput) {
    deps += [
      "//third_party/eudev:libudev",
      "//third_party/eudev:udevd",
      "//third_party/eudev:udevadm",
      "//third_party/eudev:udevd.rc",
      "//third_party/eudev:udev_conf",
      "//third_party/eudev:udev_touchscreen_rule",
      "//third_party/eudev:udev_vk_rule",
      "//third_party/libevdev:libevdev"
    ]
  }
}

ohos_prebuilt_etc("multimodalinput.rc") {
  source = "multimodalinput.cfg"
  relative_install_dir = "init"
  part_name = "input"
  subsystem_name = "multimodalinput"
}

config("multimodalinput_mmi_public_config") {
  include_dirs = [ "util/common/include/" ]
}

group("multimodalinput_mmi_base") {
  deps = []
}

group("multimodalinput_mmi_frameworks") {
  deps = [ "frameworks/proxy:libmmi-client" ]
}

group("multimodalinput_mmi_service") {
  deps = [
    "service:libmmi-server",
    "service/input_provider/hdf_provider:input_provider_hdf",
    "service/input_provider/hdf_device_algo/touch_screen:input_device_algo_touch_screen",
    "tools/inject_event:uinput",
  ]
}

group("input_jsapi_group") {
  deps = []
  if (support_jsapi) {
    deps += [
      "frameworks/napi/key_code:keycode",
      "frameworks/napi/key_event:keyevent",
      "frameworks/napi/mouse_event:mouseevent",
      "frameworks/napi/touch_event:touchevent",
    ]
    if (input_feature_monitor) {
      deps += [ "frameworks/napi/input_monitor:inputmonitor" ]
    }
    if (input_feature_mouse) {
      deps += [ "frameworks/napi/pointer:pointer" ]
    }
    if (input_feature_keyboard) {
      deps += [
        "frameworks/napi/input_consumer:inputconsumer",
        "frameworks/napi/input_event_client:inputeventclient",
      ]
    }
    if (input_feature_input_device) {
      deps += [ "frameworks/napi/input_device:inputdevice" ]
    }
    if (input_feature_input_cooperation) {
      deps += [ "frameworks/napi/input_device_cooperate:inputdevicecooperate" ]
    }
  }
}

group("examples_group") {
  deps = [
    "examples/input_device_display_bind:input_device_display_bind",
    "examples/plugins:input_plugins",
  ]
}

group("mmi_debug_tools") {
  deps = [
    ":examples_group",
    "patch/diff_libinput_mmi:libinput-analyze-mmi",
    "patch/diff_libinput_mmi:libinput-debug-mmi",
    "patch/diff_libinput_mmi:libinput-list-mmi",
    "patch/diff_libinput_mmi:libinput-measure-mmi",
    "patch/diff_libinput_mmi:libinput-quirks-mmi",
    "patch/diff_libinput_mmi:libinput-record-mmi",
    "patch/diff_libinput_mmi:libinput-tablet-mmi",
    "tools/event_inject:mmi-event-injection",
    "tools/vuinput:vuinput",
    "//third_party/eudev:udevadm",
    ":examples_group",
  ]
}

group("ut_mmi_debug_tools") {
  testonly = true
  deps = [
    "tools/event_inject:ut-event-injection-out",
    "tools/vuinput:ut-virtual-device-out",
  ]
}

group("mmi_tests_manual") {
  testonly = true
  deps = [
    "frameworks/proxy:InputManagerFilterManualTest",
    "service:TransformPointTest",
  ]
}

group("mmi_tests") {
  testonly = true
  deps = [
    "frameworks/proxy:InputManagerManualTest",
    "frameworks/proxy:InputManagerTest",
    "frameworks/proxy:KeyEventTest",
    "frameworks/proxy:PointerEventTest",
    "frameworks/proxy:ut-mmi-proxy-out",
    "service:ut-mmi-service-out",
    "test/fuzztest:test",
    "tools/inject_event:InjectEventTest",
    "util:ut-mmi-util-out",
  ]
}
