import("//foundation/multimodalinput/input/multimodalinput_mini.gni")

## Build libmmi.so {{{
config("libinputeventclient_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//foundation/multimodalinput/input/interfaces/native/innerkits/common/include",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/napi/include",
    "//foundation/ace/napi",
    "//foundation/ace/napi/interfaces/kits/napi",
    "//third_party/node/src",
    "//third_party/quickjs",
    "//utils/native/base/include",
    "//foundation/multimodalinput/input/common/include",
    "//foundation/multimodalinput/input/tools/event_inject/include",
  ]

  cflags = [
    "-DOHOS_BUILD",
    "-DOHOS_AUTO_TEST_FRAME",
  ]
  if (is_mmi_have_libinput) {
    cflags += [ "-DOHOS_BUILD_LIBINPUT" ]
  }

  if (is_mmi_have_hdf) {
    cflags += [ "-DOHOS_BUILD_HDF" ]
  }

  if (is_mmi_have_ai) {
    cflags += [ "-DOHOS_BUILD_AI" ]
  }
}

ohos_shared_library("libinputeventclient") {
  sources = [
    "src/js_register_event.cpp",
    "src/js_register_handle.cpp",
    "src/js_register_module.cpp",
    "src/js_register_util.cpp",
    "src/multi_input_common.cpp",
  ]

  configs = [ ":libinputeventclient_config" ]

  deps = [
    "//drivers/peripheral/input/hal:hdi_input",
    "//foundation/ace/napi:ace_napi",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
    "//foundation/multimodalinput/input/frameworks/util:libmmi-util",
    "//foundation/multimodalinput/input/tools/event_inject:event-injection",
    "//third_party/libxkbcommon:libxkbcommon",
    "//third_party/wayland-ivi-extension:ivi-controller",
    "//third_party/wayland-ivi-extension:libscreen-info-module",
    "//utils/native/base:utils",
  ]

  if (is_mmi_have_libinput || is_mmi_have_hdf) {
    deps += [ "//foundation/multimodalinput/input/patch/diff_libinput_mmi:libinput-third-mmi" ]
  }

  relative_install_dir = "module/multimodalinput"

  part_name = "multimodalinput_base"
}
